# Simple-QR-Generator

./: .gitignore  README.md  pyproject.toml
qrgenerator/: __init__.py  qr.py  qr.spec
