[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-qr-generator"
version = "0.1.0"
description = "A simple QR code generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "qrcode",
    "pillow"
]

[project.scripts]
qrgenerator = "qrgenerator.qr:main"
